tests/conc/reject/alias.ty
fn f(n: int) -> int:
    return n
fn main():
    t := spawn f(1)
    u := t
    print(str(wait(u)))
